--- a/index.html
+++ b/index.html
@@ -7,27 +7,41 @@
     <title>FEND24 - Quiz</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="assets/js/dark-mode.js" defer></script>
+
+    <script>
+        tailwind.config = {
+            darkMode: "class",
+        }
+    </script>
+    <script>
+        if (localStorage.getItem("color-theme") === "dark" || (!("color-theme" in localStorage) && window.matchMedia("(prefers-color-schema: dark)").matches)) {
+            document.documentElement.classList.add("dark");
+        } else {
+            document.documentElement.classList.remove("dark");
+        }
+    </script>
 </head>
-<body>
+<body class="bg-neutral-100 dark:bg-gray-900">
     <div class="mx-auto max-w-7xl py-12 sm:px-6 lg:px-8">
         <div class="mx-auto max-w-4xl">
 
-            <div class="divide-y divide-gray-300 overflow-hidden rounded-lg bg-white ring-1 ring-gray-300">
+            <div class="divide-y divide-gray-300 dark:divide-white overflow-hidden rounded-lg bg-white ring-1 ring-gray-300 dark:ring-white">
 
-                <div class="px-4 py-3 sm:px-6 bg-gray-50 flex justify-between">
-                    <div class="flex flex-col justify-between">
-                        <p class="text-2xl">Ankademin Quiz</p>
+                <div class="px-4 py-3 sm:px-6 bg-gray-50 dark:bg-gray-800 flex justify-between">
+                    <div class="flex flex-col justify-center">
+                        <p class="text-2xl dark:text-white">Ankademin Quiz</p>
                     </div>
 
-                    <button class="text-gray-500 hover:bg-gray-100 focus:outline-none rounded-lg text-sm p-2 5">
+                    <button id="theme-toggle" class="text-gray-500 dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none rounded-lg text-sm p-2 5">
                         <svg id="theme-toggle-dark-icon" class="hidden w-7 h-7" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
                         <svg id="theme-toggle-light-icon" class="hidden w-7 h-7" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
                     </button>
                 </div>
 
-                <div class="px-4 py-5 sm:p-6">
+                <div class="px-4 py-5 sm:p-6 dark:bg-gray-700">
                     <div class="flex flex-col items-center">
-                        <p class="text-2xl pb-5"></p>
+                        <p class="text-2xl pb-5 dark:text-white"></p>
                     </div>
                 </div>
             </div>
