add startup quizes to localstorage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>FEND24 - Quiz</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="assets/js/start-quizes.js" type="module" defer></script>
     <script src="assets/js/dark-mode.js" defer></script>
 
     <script>
@@ -41,7 +42,7 @@
 
                 <div class="px-4 py-5 sm:p-6 dark:bg-gray-700">
                     <div class="flex flex-col items-center">
-                        <p class="text-2xl pb-5 dark:text-white"></p>
+                        <p class="text-2xl pb-5 dark:text-white">Tillgängliga Quiz</p>
                     </div>
                 </div>
             </div>
