--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="assets/js/startup-quizes.js" type="module" defer></script>
-    <script src="assets/js/script.js" defer></script>
+    <script src="assets/js/script.js" type="module" defer></script>
     <script src="assets/js/dark-mode.js" defer></script>
 
     <script>
